<resources>
    <string name="app_name">MyRide</string>

    <string name="action_settings">Ustawienia</string>

    <string name="title_activity_search_result_screen">Rezultaty wyszukiwania</string>
    <string name="title_activity_main_screen">Wyszukaj połączenie</string>
    <string name="title_activity_choose_criteria_screen">Wybierz kryteria</string>
    <string name="title_activity_compare_criteria_screen">Porównaj kryteria</string>
    <string name="title_activity_compare_ride_screen">Porównaj połączenia</string>
    <string name="title_activity_result_ranking_screen">Ranking</string>

    <string name="main_screen_btn_search">Wyszukaj</string>
    <string name="main_screen_txv_from">Miejscowość początkowa</string>
    <string name="main_screen_txv_to">Miejscowość docelowa</string>
    <string name="main_screen_txv_date">Data wyjazdu</string>
    <string name="main_screen_txv_last_search">Ostatnie wyszukania</string>

    <string name="search_result_screen_btn_confirm">Porównaj</string>
    <string name="choose_criteria_screen_btn_confirm">Wybierz</string>
    <string name="compare_criteria_screen_btn_confirm">Zatwierdź</string>
    <string name="compare_ride_screen_btn_confirm">Zatwierdź</string>

    <string name="compare_ride_price">Koszt</string>
    <string name="compare_ride_time">Czas podróży</string>
    <string name="compare_ride_to">Przyjazd</string>

    <string name="dialog_confirm">Zatwierdź</string>

    <string name="ride_connective"> &gt;&gt; </string>

    <string name="hello_world">Hello world!</string>
    <string name="add_ride">Dodaj połączenie</string>


    <string name="add_ride_txv_from">Miejscowość początkowa</string>
    <string name="add_ride_txv_to">Miejscowość końcowa</string>

    <string name="add_ride_txv_typ_transport">Rodzaj transportu</string>
    <string name="add_ride_txv_cost">Koszt transportu</string>
    <string name="add_ride_txv_date_start">Data wyjazdu</string>
    <string name="add_ride_txv_date_end">Data przyjazdu</string>

    <string name="add_ride_txv_time_travel">Czas podróży</string>

    <string name="CENA" />

</resources>
