<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="382dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_ride_txv_from"
            android:id="@+id/item_new_ride_from"
            android:textColor="@android:color/black"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_new_ride_from"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1dp"
            android:textSize="20dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_ride_txv_to"
            android:id="@+id/item_new_ride_to"
            android:textColor="@android:color/black"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_new_ride_to"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1dp"
            android:textSize="20dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/item_cost_ride"
            android:text="@string/add_ride_txv_cost"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_margin="5dp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_cost_ride"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1dp"
            android:inputType="numberDecimal"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_ride_txv_date_start"
            android:id="@+id/item_start_date_ride"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_margin="5dp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_start_date_ride"
            android:layout_gravity="center_horizontal"
            android:editable="false"
            android:layout_margin="1dp"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_ride_txv_date_end"
            android:id="@+id/item_end_date_ride"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_margin="5dp"
            android:gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_end_date_ride"
            android:layout_gravity="center_horizontal"
            android:editable="false"
            android:layout_margin="1dp"
            android:textIsSelectable="false"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_gravity="center_vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_ride_txv_typ_transport"
            android:id="@+id/item_typ_transport"
            android:textColor="@android:color/black"
            android:layout_margin="5dp"
            android:textSize="18dp"
            android:gravity="center" />

        <Spinner
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:id="@+id/spn_typ_transport"
            android:spinnerMode="dialog"
            android:layout_margin="1dp"
            android:layout_gravity="right"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="7.25" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_ride_txv_time_travel"
            android:id="@+id/item_time_travel"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1" />

        <EditText
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:id="@+id/edt_time_travel"
            android:layout_gravity="center_horizontal"
            android:layout_margin="1dp"
            android:inputType="number"
            android:textSize="20dp"
            android:gravity="right"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DODAJ"
        android:id="@+id/dialog_newride_btn_confirm"
        android:layout_gravity="center_horizontal" />

</LinearLayout>